Standardization of Code data

--- a/_data/code/federal/tbs-sct.yml
+++ b/_data/code/federal/tbs-sct.yml
@@ -10,15 +10,9 @@ releases:
     description:
       en: GC digital collaboration platform (GCconnex and GCcollab)
       fr: Plateforme de collaboration numérique du GC (GCconnex and GCcollab)
-    languages:
-      - PHP
-      - MySQL
     name:
       en: GCconnex
       fr: GCconnex
-    organization:
-      en: Digital Enablement Division
-      fr: Division de la mobilisation numérique
     licences:
       - URL:
           en: >-
@@ -26,13 +20,9 @@ releases:
           fr: >-
             https://github.com/gctools-outilsgc/gcconnex/blob/gcconnex/LICENSE.txt
         spdxID: GPL-2.0
-    relatedCode:
-      - URL: 'https://github.com/Elgg/Elgg'
-        name: Elgg
     repositoryURL:
       en: 'https://github.com/gctools-outilsgc/gcconnex'
       fr: 'https://github.com/gctools-outilsgc/gcconnex'
-    status: Production
     tags:
       en:
         - Collaboration
@@ -40,6 +30,18 @@ releases:
       fr:
         - Collaboration
         - Social
+    languages:
+      - PHP
+      - MySQL
+    organization:
+      en: Digital Enablement Division
+      fr: Division de la mobilisation numérique
+    relatedCode:
+      - URL:
+          en: 'https://github.com/Elgg/Elgg'
+        name:
+          en: Elgg
+    status: Maintained
   - contact:
       email: cds-snc@tbs-sct.gc.ca
     date:
@@ -55,15 +57,10 @@ releases:
     name:
       en: CDS Website
       fr: Site Web SNC
-    organization:
-      en: Canadian Digital Services
-      fr: Services numériques Canadiens
     licences:
       - URL:
-          en: >-
-            https://github.com/cds-snc/digital-canada-ca/blob/master/LICENSE.txt
-          fr: >-
-            https://github.com/cds-snc/digital-canada-ca/blob/master/LICENSE.txt
+          en: 'https://github.com/cds-snc/digital-canada-ca/blob/master/LICENSE.txt'
+          fr: 'https://github.com/cds-snc/digital-canada-ca/blob/master/LICENSE.txt'
         spdxID: MIT
     repositoryURL:
       en: 'https://github.com/cds-snc/digital-canada-ca'
@@ -73,6 +70,9 @@ releases:
         - Website
       fr:
         - Site Web
+    organization:
+      en: Canadian Digital Services
+      fr: Services numériques Canadiens
   - contact:
       email: wet-boew@tbs-sct.gc.ca
     date:
@@ -112,20 +112,27 @@ releases:
     description:
       en: Government of Canada CKAN Extension
       fr: Extension à CKAN du Gouvernement du Canada
-    languages:
-      - Python
     name:
       en: ckanext-canada
       fr: ckanext-canada
-    organization:
-      en: Open Government
-      fr: Gouvernement Ouvert
     licences:
       - URL:
           en: 'https://github.com/open-data/ckanext-canada/blob/master/COPYING'
-          fr: >-
-            https://github.com/open-data/ckanext-canada/blob/master/COPYING.fr
+          fr: 'https://github.com/open-data/ckanext-canada/blob/master/COPYING.fr'
         spdxID: MIT
+    repositoryURL:
+      en: 'https://github.com/open-data/ckanext-canada'
+      fr: 'https://github.com/open-data/ckanext-canada'
+    tags:
+      en:
+        - CKAN Extension
+      fr:
+        - Extension CKAN
+    languages:
+      - Python
+    organization:
+      en: Open Government
+      fr: Gouvernement Ouvert
     relatedCode:
       - URL:
           en: 'https://github.com/ckan/ckan'
@@ -133,15 +140,7 @@ releases:
         name:
           en: CKAN
           fr: CKAN
-    repositoryURL:
-      en: 'https://github.com/open-data/ckanext-canada'
-      fr: 'https://github.com/open-data/ckanext-canada'
-    status: Production
-    tags:
-      en:
-        - CKAN Extension
-      fr:
-        - Extension CKAN
+    status: Maintained
   - contact:
       email: Christopher.Jaja@tbs-sct.gc.ca
       name: Christopher Jaja
@@ -150,16 +149,10 @@ releases:
       metadataLastUpdated: '2018-03-26'
     description:
       en: Store CKAN resources against multiple cloud providers.
-      fr: >-
-        Stocker les ressources CKAN contre plusieurs fournisseurs infonuagique.
-    languages:
-      - Python
+      fr: Stocker les ressources CKAN contre plusieurs fournisseurs infonuagique.
     name:
       en: ckanext-cloudstorage
       fr: ckanext-cloudstorage
-    organization:
-      en: Open Government
-      fr: Gouvernement Ouvert
     licences:
       - URL:
           en: >-
@@ -167,6 +160,19 @@ releases:
           fr: >-
             https://github.com/open-data/ckanext-cloudstorage/blob/master/COPYING.fr
         spdxID: MIT
+    repositoryURL:
+      en: 'https://github.com/open-data/ckanext-cloudstorage'
+      fr: 'https://github.com/open-data/ckanext-cloudstorage'
+    tags:
+      en:
+        - CKAN Extension
+      fr:
+        - Extension CKAN
+    languages:
+      - Python
+    organization:
+      en: Open Government
+      fr: Gouvernement Ouvert
     relatedCode:
       - URL:
           en: 'https://github.com/ckan/ckan'
@@ -174,15 +180,7 @@ releases:
         name:
           en: CKAN
           fr: CKAN
-    repositoryURL:
-      en: 'https://github.com/open-data/ckanext-cloudstorage'
-      fr: 'https://github.com/open-data/ckanext-cloudstorage'
-    status: Production
-    tags:
-      en:
-        - CKAN Extension
-      fr:
-        - Extension CKAN
+    status: Maintained
   - contact:
       email: Christopher.Jaja@tbs-sct.gc.ca
       name: Christopher Jaja
@@ -190,20 +188,28 @@ releases:
       created: '2013-09-08'
       metadataLastUpdated: '2018-03-26'
     description:
-      en: Easy, shareable custom CKAN schemas
-    languages:
-      - Python
+      en: 'Easy, shareable custom CKAN schemas'
     name:
       en: ckanext-scheming
       fr: ckanext-scheming
-    organization:
-      en: Open Government
-      fr: Gouvernement Ouvert
     licences:
       - URL:
           en: 'https://github.com/ckan/ckanext-scheming/blob/master/COPYING'
           fr: 'https://github.com/ckan/ckanext-scheming/blob/master/COPYING.fr'
         spdxID: MIT
+    repositoryURL:
+      en: 'https://github.com/open-data/ckanext-scheming'
+      fr: 'https://github.com/open-data/ckanext-scheming'
+    tags:
+      en:
+        - CKAN Extension
+      fr:
+        - Extension CKAN
+    languages:
+      - Python
+    organization:
+      en: Open Government
+      fr: Gouvernement Ouvert
     relatedCode:
       - URL:
           en: 'https://github.com/ckan/ckan'
@@ -211,15 +217,7 @@ releases:
         name:
           en: CKAN
           fr: CKAN
-    repositoryURL:
-      en: 'https://github.com/open-data/ckanext-scheming'
-      fr: 'https://github.com/open-data/ckanext-scheming'
-    status: Production
-    tags:
-      en:
-        - CKAN Extension
-      fr:
-        - Extension CKAN
+    status: Maintained
   - contact:
       email: Christopher.Jaja@tbs-sct.gc.ca
       name: Christopher Jaja
@@ -227,22 +225,33 @@ releases:
       created: '2013-04-07'
       metadataLastUpdated: '2018-03-26'
     description:
+      fr: >-
+        Interface de ligne de commande et module Python pour accéder aux actions
+        de l'API CKAN
       en: >-
         Command line interface and Python module for accessing the CKAN Action
         API
-    languages:
-      - Python
     name:
       en: ckanapi
       fr: ckanapi
-    organization:
-      en: Open Government
-      fr: Gouvernement Ouvert
     licences:
       - URL:
           en: 'https://github.com/ckan/ckanapi/blob/master/COPYING'
           fr: 'https://github.com/ckan/ckanapi/blob/master/COPYING.fr'
         spdxID: MIT
+    repositoryURL:
+      en: 'https://github.com/ckan/ckanapi'
+      fr: 'https://github.com/ckan/ckanapi'
+    tags:
+      en:
+        - CKAN Tool
+      fr:
+        - Outil CKAN
+    languages:
+      - Python
+    organization:
+      en: Open Government
+      fr: Gouvernement Ouvert
     relatedCode:
       - URL:
           en: 'https://github.com/ckan/ckan'
@@ -250,15 +259,7 @@ releases:
         name:
           en: CKAN
           fr: CKAN
-    repositoryURL:
-      en: 'https://github.com/ckan/ckanapi'
-      fr: 'https://github.com/ckan/ckanapi'
-    status: Production
-    tags:
-      en:
-        - CKAN Tool
-      fr:
-        - Outil CKAN
+    status: Maintained
   - contact:
       email: Christopher.Jaja@tbs-sct.gc.ca
       name: Christopher Jaja
@@ -267,19 +268,27 @@ releases:
       metadataLastUpdated: '2018-03-26'
     description:
       en: Multilingual metadata fields for CKAN
-    languages:
-      - Python
     name:
       en: ckanext-fluent
       fr: ckanext-fluent
-    organization:
-      en: Open Government
-      fr: Gouvernement Ouvert
     licences:
       - URL:
           en: 'https://github.com/ckan/ckanext-fluent/blob/master/COPYING'
           fr: 'https://github.com/ckan/ckanext-fluent/blob/master/COPYING.fr'
         spdxID: MIT
+    repositoryURL:
+      en: 'https://github.com/ckan/ckanext-fluent'
+      fr: 'https://github.com/ckan/ckanext-fluent'
+    tags:
+      en:
+        - CKAN Extension
+      fr:
+        - Extension CKAN
+    languages:
+      - Python
+    organization:
+      en: Open Government
+      fr: Gouvernement Ouvert
     relatedCode:
       - URL:
           en: 'https://github.com/ckan/ckan'
@@ -287,15 +296,7 @@ releases:
         name:
           en: CKAN
           fr: CKAN
-    repositoryURL:
-      en: 'https://github.com/ckan/ckanext-fluent'
-      fr: 'https://github.com/ckan/ckanext-fluent'
-    status: Production
-    tags:
-      en:
-        - CKAN Extension
-      fr:
-        - Extension CKAN
+    status: Maintained
   - contact:
       email: sebastien.lemay@canada.ca
     date:
@@ -312,11 +313,6 @@ releases:
           en: 'https://github.com/canada-ca/ore-ero/blob/master/LICENSE.txt'
           fr: 'https://github.com/canada-ca/ore-ero/blob/master/LICENSE.txt'
         spdxID: MIT
-    partners:
-      - email: renatabianca.tomazeli@ville.montreal.qc.ca
-        name:
-          en: City of Montreal
-          fr: Ville de Montréal
     repositoryURL:
       en: 'https://github.com/canada-ca/ore-ero'
       fr: 'https://github.com/canada-ca/ore-ero'
@@ -327,3 +323,8 @@ releases:
       fr:
         - Site Web
         - Données
+    partners:
+      - email: renatabianca.tomazeli@ville.montreal.qc.ca
+        name:
+          en: City of Montreal
+          fr: Ville de Montréal
