--- a/_data/code/federal/asc-csa.yml
+++ b/_data/code/federal/asc-csa.yml
@@ -3,20 +3,18 @@ schemaVersion: '1.0'
 adminCode: asc-csa
 releases:
   - contact:
+      email: apogy-dev@eclipse.org
       URL:
         en: 'https://projects.eclipse.org/projects/technology.apogy/contact'
         fr: 'https://projects.eclipse.org/projects/technology.apogy/contact'
-      email: apogy-dev@eclipse.org
     date:
       created: '2015-09-28'
       metadataLastUpdated: '2019-01-31'
     description:
-      en: The one-stop-shop solution for operating robots, satellites and beyond
+      en: 'The one-stop-shop solution for operating robots, satellites and beyond'
       fr: >-
         Un logiciel polyvalent pour faire fonctionner des robots et des
         satellites
-    languages:
-      - Java
     name:
       en: Apogy
       fr: Apogy
@@ -35,3 +33,5 @@ releases:
       fr:
         - Robots
         - Espace
+    languages:
+      - Java
