--- a/_data/code/municipal/mtl_qc.yml
+++ b/_data/code/municipal/mtl_qc.yml
@@ -3,20 +3,16 @@ schemaVersion: '1.0'
 adminCode: mtl_qc
 releases:
   - contact:
-      URL:
-        en: >-
-          https://github.com/VilledeMontreal/CKAN-Extension-Territoire/issues
-        fr: >-
-          https://github.com/VilledeMontreal/CKAN-Extension-Territoire/issues
       email: julio.alcantara@ville.montreal.qc.ca
+      URL:
+        en: 'https://github.com/VilledeMontreal/CKAN-Extension-Territoire/issues'
+        fr: 'https://github.com/VilledeMontreal/CKAN-Extension-Territoire/issues'
     date:
       created: '2014-02-14'
       metadataLastUpdated: '2019-01-29'
     description:
       en: City of Montreal CKAN Extension
       fr: Extension CKAN de la ville de Montréal
-    languages:
-      - Python
     name:
       en: CKAN-Extension-Territoire
       fr: CKAN-Extension-Territoire
@@ -27,17 +23,9 @@ releases:
           fr: >-
             https://github.com/VilledeMontreal/CKAN-Extension-Territoire/blob/master/Licence-fr.txt
         spdxID: MIT
-    relatedCode:
-      - URL:
-          en: 'https://github.com/ckan/ckan'
-          fr: 'https://github.com/ckan/ckan'
-        name:
-          en: CKAN
-          fr: CKAN
     repositoryURL:
       en: 'https://github.com/VilledeMontreal/CKAN-Extension-Territoire'
       fr: 'https://github.com/VilledeMontreal/CKAN-Extension-Territoire'
-    status: Production
     tags:
       en:
         - CKAN Extension
@@ -45,3 +33,13 @@ releases:
       fr:
         - Extension CKAN
         - Catalogue de données
+    languages:
+      - Python
+    relatedCode:
+      - URL:
+          en: 'https://github.com/ckan/ckan'
+          fr: 'https://github.com/ckan/ckan'
+        name:
+          en: CKAN
+          fr: CKAN
+    status: Maintained
