Missing yml code standardization

--- a/_data/code/federal/statcan.yml
+++ b/_data/code/federal/statcan.yml
@@ -3,14 +3,16 @@ schemaVersion: '1.0'
 adminCode: statcan
 releases:
   - contact:
-      URL: 'https://github.com/CSBP-CPSE/OpenTabulate/issues'
       email: maksymarturo.neyra-nesterenko@canada.ca
+      URL:
+        en: 'https://github.com/CSBP-CPSE/OpenTabulate/issues'
+        fr: 'https://github.com/CSBP-CPSE/OpenTabulate/issues'
     date:
       created: '2018-01-07'
       metadataLastUpdated: '2019-04-18'
     description:
-      en: Centralize, process, and clean data
-      fr: Centraliser, traiter et nettoyer les données
+      en: 'Centralize, process, and clean data'
+      fr: 'Centraliser, traiter et nettoyer les données'
     name:
       en: OpenTabulate
       fr: OpenTabulate
