Standardization of Software data

--- a/_data/software/ansible.yml
+++ b/_data/software/ansible.yml
@@ -6,7 +6,7 @@ description:
 homepageURL:
   en: 'https://www.ansible.com/'
   fr: 'https://www.ansible.com/'
-cs:
+licences:
   - URL:
       en: 'https://github.com/ansible/ansible/blob/devel/COPYING'
       fr: 'https://github.com/ansible/ansible/blob/devel/COPYING'
