--- a/_data/software/mediawiki.yml
+++ b/_data/software/mediawiki.yml
@@ -1,7 +1,7 @@
 ---
 schemaVersion: '1.0'
 description:
-  en: Wiki package written in PHP, originally for use on Wikipedia
+  en: 'Wiki package written in PHP, originally for use on Wikipedia'
   fr: Ensemble Wiki développé à l'origine pour Wikipédia
 homepageURL:
   en: 'https://www.mediawiki.org/wiki/MediaWiki'
@@ -25,30 +25,30 @@ administrations:
   - adminCode: tbs-sct
     uses:
       - contact:
+          email: ilia.salem@tbs-sct.gc.ca
           URL:
             en: 'https://github.com/gctools-outilsgc/gcpedia/issues'
             fr: 'https://github.com/gctools-outilsgc/gcpedia/issues'
-          email: ilia.salem@tbs-sct.gc.ca
         date:
           started: '2019-05-06'
           metadataLastUpdated: '2019-05-16'
-        name:
-          en: GCpedia
-          fr: GCpedia
         description:
           en: Internal Government of Canada Wiki
           fr: Wiki interne du gouvernement du Canada
+        name:
+          en: GCpedia
+          fr: GCpedia
       - contact:
+          email: ilia.salem@tbs-sct.gc.ca
           URL:
             en: 'https://github.com/gctools-outilsgc/gcpedia/issues'
             fr: 'https://github.com/gctools-outilsgc/gcpedia/issues'
-          email: ilia.salem@tbs-sct.gc.ca
         date:
           started: '2019-05-06'
           metadataLastUpdated: '2019-05-16'
-        name:
-          en: GCcollab Wiki
-          fr: Wiki GCcollab
         description:
           en: External Government of Canada Wiki
           fr: Wiki externe du gouvernement du Canada
+        name:
+          en: GCcollab Wiki
+          fr: Wiki GCcollab
