Separated params for homepageURL in code and software

--- a/_data/forms/config-code.yml
+++ b/_data/forms/config-code.yml
@@ -16,6 +16,7 @@ formGroups:
     title: downloadUrl
     param: {type: url, required: false}
   - preset: homepageURL
+    param: {type: url, required: false}
   - preset: languages
   - widget: string-i18n
     title: organization
