--- a/_data_templates/code_mandatory.yml
+++ b/_data_templates/code_mandatory.yml
@@ -8,8 +8,10 @@ releases:
       created: 'YYYY-MM-DD'
       metadataLastUpdated: 'YYYY-MM-DD'
     description:
-      en: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      fr: Quisque bibendum ante ligula, porta vestibulum enim egestas vel.
+      whatItDoes:
+        en: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        fr: Quisque bibendum ante ligula, porta vestibulum enim egestas vel.
+    category: '12345678'
     name:
       en: Example
       fr: Exemple
