--- a/_data/code/federal/asc-csa.yml
+++ b/_data/code/federal/asc-csa.yml
@@ -3,33 +3,38 @@ schemaVersion: '1.0'
 adminCode: asc-csa
 releases:
   - contact:
-      URL:
-        en: 'https://projects.eclipse.org/projects/technology.apogy/contact'
-        fr: 'https://projects.eclipse.org/projects/technology.apogy/contact'
-      email: apogy-dev@eclipse.org
+      email: test@gmail.com
     date:
-      created: '2015-09-28'
-      metadataLastUpdated: '2019-01-31'
+      created: '2019-08-04'
+      metadataLastUpdated: '2019-08-12'
     description:
-      en: The one-stop-shop solution for operating robots, satellites and beyond
-      fr: Un logiciel polyvalent pour faire fonctionner des robots et des satellites
-    languages:
-      - Java
+      en: test
+      fr: test
+      howItWorks:
+        en: test
+        fr: test
     name:
       en: Apogy
       fr: Apogy
-    licenses:
+    licences:
       - URL:
-          en: 'https://git.eclipse.org/c/apogy/apogy.git/tree/LICENSE'
-          fr: 'https://git.eclipse.org/c/apogy/apogy.git/tree/LICENSE'
-        spdxID: EPL-1.0
+          en: 'https://www.google.com/'
+          fr: 'https://www.google.com/'
+        spdxID: APSL-2.0
     repositoryURL:
-      en: 'https://git.eclipse.org/c/apogy/apogy.git'
-      fr: 'https://git.eclipse.org/c/apogy/apogy.git'
+      en: 'https://www.google.com/'
+      fr: 'https://www.google.com/'
     tags:
       en:
-        - Robots
-        - Space
+        - test
       fr:
-        - Robots
-        - Espace
+        - test
+    category: '43231500'
+    languages:
+      - C++
+    partners:
+      - email: test@gmail.com
+        name:
+          en: test
+          fr: test
+    status: Alpha
