--- a/_data/code/federal/asc-csa.yml
+++ b/_data/code/federal/asc-csa.yml
@@ -4,17 +4,20 @@ adminCode: asc-csa
 releases:
   - contact:
       email: apogy-dev@eclipse.org
-      URL:
-        en: 'https://projects.eclipse.org/projects/technology.apogy/contact'
-        fr: 'https://projects.eclipse.org/projects/technology.apogy/contact'
     date:
       created: '2015-09-28'
       metadataLastUpdated: '2019-01-31'
     description:
-      en: 'The one-stop-shop solution for operating robots, satellites and beyond'
-      fr: >-
-        Un logiciel polyvalent pour faire fonctionner des robots et des
-        satellites
+      whatItDoes:
+        en: >-
+          The one-stop-shop solution for operating robots, satellites and beyond
+        fr: >-
+          Un logiciel polyvalent pour faire fonctionner des robots et des
+          satellites
+      howItWorks:
+        en: null
+        fr: null
+    category: '43232600'
     name:
       en: Apogy
       fr: Apogy
