--- a/_data/software/angular.yml
+++ b/_data/software/angular.yml
@@ -1,8 +1,15 @@
 ---
 schemaVersion: '1.0'
 description:
-  en: A framework for mobile and desktop applications.
-  fr: Un framework pour les applications mobiles et bureaux.
+  whatItDoes:
+    en: >-
+      A framework for mobile and desktop applications.
+    fr: >-
+      Un framework pour les applications mobiles et bureaux.
+  howItWorks:
+    en: null
+    fr: null
+category: '43232400'
 homepageURL:
   en: 'https://angular.io/'
   fr: 'https://angular.io/'
