--- a/_data/software/apache.yml
+++ b/_data/software/apache.yml
@@ -1,8 +1,15 @@
 ---
 schemaVersion: '1.0'
 description:
-  en: Cross-platform web server
-  fr: Serveur Web multiplateforme
+  whatItDoes:
+    en: >-
+      Cross-platform web server.
+    fr: >-
+     Serveur Web multiplateforme.
+  howItWorks:
+    en: null
+    fr: null
+category: '43232700'
 homepageURL:
   en: 'https://httpd.apache.org'
   fr: 'https://httpd.apache.org'
