--- a/_data/software/etherpad.yml
+++ b/_data/software/etherpad.yml
@@ -1,8 +1,15 @@
 ---
 schemaVersion: '1.0'
 description:
-  en: Edit text documents collaboratively in real-time
-  fr: Collaboration en temps réel sur des documents textes
+  whatItDoes:
+    en: >-
+      Edit text documents collaboratively in real-time.
+    fr: >-
+      Collaboration en temps réel sur des documents textes.
+  howItWorks:
+    en: null
+    fr: null
+category: '43232100'
 homepageURL:
   en: 'http://etherpad.org/'
   fr: 'http://etherpad.org/'
