--- a/_data/software/accumulo.yml
+++ b/_data/software/accumulo.yml
@@ -11,7 +11,7 @@ description:
   howItWorks:
     en: null
     fr: null
-category: ''
+category: '43232300'
 homepageURL:
   en: 'https://accumulo.apache.org/'
   fr: 'https://accumulo.apache.org/'
