--- a/_data/software/docker.yml
+++ b/_data/software/docker.yml
@@ -1,12 +1,17 @@
 ---
 schemaVersion: '1.0'
 description:
-  en: >-
-    Performs operating-system-level virtualization also known as
-    containerization
-  fr: >-
-    Effectue une virtualisation au niveau du système d'exploitation, également
-    appelée conteneurisation
+  whatItDoes:
+    en: >-
+      Performs operating-system-level virtualization also known as
+      containerization
+    fr: >-
+      Effectue une virtualisation au niveau du système d'exploitation, également
+      appelée conteneurisation
+  howItWorks:
+    en: null
+    fr: null
+category: '43233000'
 homepageURL:
   en: 'https://www.docker.com'
   fr: 'https://www.docker.com'
