--- a/_data/software/drupal.yml
+++ b/_data/software/drupal.yml
@@ -1,12 +1,17 @@
 ---
 schemaVersion: '1.0'
 description:
-  en: >-
-    Content management system (CMS) written in PHP. Drupal provides a back-end
-    framework for web sites.
-  fr: >-
-    Système de gestion de contenu (CMS) écrit en PHP. Drupal fournis une
-    plateforme back-end pour des sites Web.
+  whatItDoes:
+    en: >-
+      Content management system (CMS) written in PHP. Drupal provides a back-end
+      framework for web sites.
+    fr: >-
+      Système de gestion de contenu (CMS) écrit en PHP. Drupal fournis une
+      plateforme back-end pour des sites Web.
+  howItWorks:
+    en: null
+    fr: null
+category: '43232200'
 homepageURL:
   en: 'https://www.drupal.org'
   fr: 'https://www.drupal.org'
