--- a/_data/software/laravel.yml
+++ b/_data/software/laravel.yml
@@ -1,12 +1,17 @@
 ---
 schemaVersion: '1.0'
 description:
-  en: >-
-    PHP web framework intended for the development of web applications following
-    the model–view–controller (MVC) architectural pattern.
-  fr: >-
-    Framework Web PHP destiné au développement d'applications Web suivant le
-    modèle architectural MVC modèle-vue-contrôleur.
+  whatItDoes:
+    en: >-
+      PHP web framework intended for the development of web applications following
+      the model–view–controller (MVC) architectural pattern.
+    fr: >-
+      Framework Web PHP destiné au développement d'applications Web suivant le
+      modèle architectural MVC modèle-vue-contrôleur.
+  howItWorks:
+    en: null
+    fr: null
+category: '43232400'
 homepageURL:
   en: 'https://laravel.com'
   fr: 'https://laravel.com'
