--- a/_data/software/qgis.yml
+++ b/_data/software/qgis.yml
@@ -1,8 +1,15 @@
 ---
 schemaVersion: '1.0'
 description:
-  en: A Free and Open Source Geographic Information System
-  fr: Système d'Information Géographique Libre et Open Source
+  whatItDoes:
+    en: >-
+      A Free and Open Source Geographic Information System.
+    fr: >-
+      Système d'Information Géographique Libre et Open Source.
+  howItWorks:
+    en: null
+    fr: null
+category: '43232500'
 homepageURL:
   en: 'https://qgis.org/en/site/'
   fr: 'https://qgis.org/fr/site/'
